--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Форма обратной связи</title>
-  <link rel="stylesheet" href="/feedbackcss/form-processing.css">
+  <link rel="stylesheet" href="form-processing.css">
 </head>
 
 <body>
@@ -69,7 +69,7 @@
 
   </div>
 
-  <script src="/feedback/js/form-processing.js"></script>
+  <script src="form-processing.js"></script>
   <script>
 
 
